--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transfer-good",
   "version": "1.0.0",
-  "main": "src/http/server.ts",
+  "main": "src/server.ts",
   "engines": {
     "node": ">=20.17.0",
     "npm": ">=10.8.2",
@@ -10,7 +10,7 @@
     "bun": "please-use-npm"
   },
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,14 @@
     "@types/node": "^22.13.9",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@fastify/cors": "^11.0.0",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
+    "fastify-type-provider-zod": "^4.0.2",
+    "zod": "^3.24.2"
   }
 }
