--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.4.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   }
 }
